--- a/mcp/using-mcp/account-management/index.mdx
+++ b/mcp/using-mcp/account-management/index.mdx
@@ -7,11 +7,11 @@ import { Screenshot } from "@/mdx/components";
 
 # Use MCP for Account Management with Slack and HubSpot
 
-[17% of businesses](https://www.zippia.com/advice/crm-statistics/#:~:text=17%25%20of%20businesses%20say%20that%20manual%20data%20entry%20is%20their%20biggest%20challenge%20in%20using%20their%20current%20CRM.) say manual data entry is their biggest CRM challenge. Sales teams post call summaries in Slack, but critical updates never make it to the CRM. Managers spot urgent opportunities in chat notifications but can't quickly prioritize them. In the meantime, your competitor is closing deals because you are not prioritizing quickly in your workflow, and your sales team has to look for what is prioritized. Lead volume increases but conversion rates stay flat because urgent opportunities get buried in manual workflows.
+[17% of businesses](https://www.zippia.com/advice/crm-statistics/#:~:text=17%25%20of%20businesses%20say%20that%20manual%20data%20entry%20is%20their%20biggest%20challenge%20in%20using%20their%20current%20CRM.) say manual data entry is their biggest CRM challenge.Sales teams post call summaries in Slack, then manually copy that information into HubSpot, doubling their data entry work. Managers spot urgent opportunities in channels notifications but can't quickly prioritize them without logging into the CRM to update deal status. In the meantime, your competitor is closing deals because you are not prioritizing quickly in your workflow, and your sales team has to look for what is prioritized. Lead volume increases but conversion rates stay flat because urgent opportunities get buried in manual workflows.
 
-What if emoji reactions could highlight priority messages? Your manager reacts to a Slack message with ‼️ and the sales rep asks Claude Desktop to show all high-priority messages and update the corresponding HubSpot deals.
+What if emoji reactions could highlight priority messages? Your manager reacts to a Slack message with ‼️ and the sales rep asks Claude to show all high-priority messages and update the corresponding HubSpot deals.
 
-In this article, you'll build an integration where Claude Desktop reads emoji-marked Slack messages and updates HubSpot records on command. Your account managers will be able to prioritize deals through emoji reactions on Slack messages.
+In this article, you'll build an integration where Claude reads emoji-marked Slack messages and updates HubSpot records on command. Your account managers will be able to prioritize deals through emoji reactions on Slack messages.
 
 ## Why use MCP? 
 
@@ -20,20 +20,20 @@ If you're managing sales follow-ups manually, you're probably:
 - Listening to call summaries in Slack notifications
 - Identifying which deals need immediate attention
 - Logging into HubSpot to find deal records
-- Adding notes and updating deal status manually
+- Adding notes and updating deals status manually
 - Coordinating priority changes with your team
 
 If your sales team handles dozens of calls daily, this process becomes overwhelming. Important deals get delayed while account managers spend time on CRM updates instead of selling.
 
 You could build custom integrations to automate this workflow. You might write scripts to monitor Slack notifications, parse deal information, and update HubSpot records. But you'd need webhook handling, API authentication for multiple services, and logic to classify urgent versus routine follow-ups.
 
-Instead, you can ask Claude Desktop to find all urgent messages and update your CRM records. You ask Claude to "show me all high-priority messages marked with ‼️ emoji in Slack," review the urgent calls, then ask Claude to "add notes to the HubSpot deal for those urgent calls." Claude uses MCP servers to read Slack reactions, find messages, locate HubSpot deals, and update records.
+Instead, you can ask Claude to find all urgent messages and update your CRM records. You ask Claude "show me all high-priority messages marked with ‼️ reaction in Slack," review the urgent calls, then ask Claude to "add notes to the HubSpot deal for those urgent calls." Claude uses MCP servers to read Slack reactions, find messages, locate HubSpot deals, and update records.
 
 ### The MCP Advantage
 
 MCP standardizes how LLMs access different tools. Instead of writing custom integrations for Slack, HubSpot, and future tools you want to add, you get one consistent interface that LLMs can use intelligently across any platform. Since MCP is an open protocol, it works with any LLM model or agent framework.
 
-Claude Desktop makes MCP integration simple. Add MCP server configurations to your `claude_desktop_config.json` file, reload the app, and Claude gains access to your tools.
+Claude makes MCP integration simple. Add MCP server configurations to your `claude_desktop_config.json` file, reload the app, and Claude gains access to your tools.
 
 ## Prerequisites
 
@@ -66,7 +66,7 @@ To build this automated account management workflow, you'll need:
 
 ## Build the Slack integration 
 
-You'll create an API that retrieves Slack messages and reactions for account management. This API serves as the backend for the MCP server, giving Claude Desktop access to sales call notifications and priority reactions.
+You'll create an API that retrieves Slack messages and reactions for account management. This API serves as the backend for the MCP server, giving Claude access to sales call notifications and priority reactions.
 
 The API exposes these endpoints for account management workflow:
 
@@ -80,7 +80,7 @@ Here's how you'll build the API:
 - Set up the Python project with dependencies
 - Define the FastAPI application and Pydantic models for message data validation
 - Implement the endpoint logic with Slack SDK integration for call notifications
-- Enrich the OpenAPI document with `x-gram` extensions that help Gram generate better MCP tool descriptions for Claude Desktop.
+- Enrich the OpenAPI document with `x-gram` extensions that help Gram generate better MCP tool descriptions for Claude.
 
 ### Create the project
 
@@ -878,16 +878,16 @@ Copy the API key somewhere safe as we will need it in the next section for Claud
 
 ## Install the Slack MCP server in Claude Desktop
 
-With Slack MCP server ready and deployed, let's add the server in Claude Desktop. 
+With the Slack MCP server ready and deployed, let's add the server in Claude Desktop. 
 
-Now, click on the `MCP` tab to access your MCP server deployment configurations. 
+Click on the `MCP` tab and select the Slack MCP server to get access to deployment configurations. 
 
 You can make your server public or private. For security, this tutorial works with a private server. We will configure the API URL and the token, on the client side, and also add the Gram Key.
 
 <Screenshot
   image={{
     src: "./assets/gram-mcp-configuration.png",
-    alt: "MCP tab in Claude Desktop",
+    alt: "MCP tab in Gram",
   }}
 />
 
@@ -918,7 +918,7 @@ Copy the configuration under the `Pass-through Authentication` section. We will 
 
 Replace `${VALUE}` with the the values of the Slack token and the API server URL, which will just be the ngrok URL. 
 
-Open the `claude-desktop-config.json` file and add the configuration for the Slack MCP server.
+Open the `claude_desktop_config.json` file and add the configuration for the Slack MCP server.
 
 ```json
 {
@@ -952,7 +952,7 @@ HubSpot has launched an MCP service to allow AI assistants like Claude to connec
 
 ### Create the HubSpot private application 
 
-Before adding the HubSpot MCP server in Claude Desktop, you will create a HubSpot private application, assign scopes for the actions you want Claude to execute, and retrieve the API key.
+Before adding the HubSpot MCP server in Claude Desktop, you will create a HubSpot private application, assign scopes for the actions you want to allow Claude to execute, and retrieve the API key.
 
 On the dashboard homepage, click on the settings icon in the top navigation bar. 
 
@@ -1042,9 +1042,9 @@ Close and reopen Claude Desktop. You're ready to test the integration.
 Now let's test the complete workflow. The test scenario follows this flow. Feel free to adapt it to your current setup:
 
 - A notification message is posted in a Slack channel called leads. 
-- Someone adds the ‼️emoji to the message indicating high priority. 
-- Using Claude Desktop, we ask for a summary of today messages in the leads channel and the one with priority. 
-- We then ask Claude to add a note to the priority ones with message content that helps decide if this is a positive or negative lead.
+- Someone adds the ‼️reaction to the message indicating high priority. 
+- Using Claude Desktop, we ask for a summary of messages in the leads channel and the one with priority. 
+- We then ask Claude to analyze the high-priority messages and add notes to the corresponding HubSpot deals indicating whether each lead looks promising or needs attention.
 
 Let's ask Claude to send a summary of leads call notifications and the high priority ones.
 
@@ -1055,7 +1055,7 @@ Let's ask Claude to send a summary of leads call notifications and the high prio
   }}
 />
 
-Claude found priority leads for us. Now ask Claude to add a note to those leads and mark them as high priority.
+Claude found priority leads for us. Let's Claude to add a note to those leads and mark them as high priority.
 
 <Screenshot
   image={{
@@ -1064,7 +1064,7 @@ Claude found priority leads for us. Now ask Claude to add a note to those leads 
   }}
 />
 
-Navigate to HubSpot -> Contacts -> Deals and click on the related to see the results.
+In HubSpot, navigate to Contacts -> Deals and click on the related to see the results.
 
 <Screenshot
   image={{
@@ -1073,13 +1073,13 @@ Navigate to HubSpot -> Contacts -> Deals and click on the related to see the res
   }}
 />
 
-Now you have an integration that turns emoji reactions in Slack into automatic HubSpot updates through Claude Desktop.
+Now you have an integration that turns reactions in Slack into automatic HubSpot updates through Claude Desktop.
 
 ## Final thoughts
 
-We've built an account management system that turns manual CRM work into simple conversations with Claude Desktop. Sales managers can now use emoji reactions in Slack to highlight important messages for Claude Desktop and Claude will read the messages and use HubSpot for updates without switching between tools or logging into different systems.
+We've built an account management system that turns manual CRM work into simple conversations with Claude. Sales managers can now use reactions in Slack to highlight important messages for Claude and Claude will read the messages and use HubSpot for updates without switching between tools or logging into different systems.
 
-This shows how MCP makes business tools work together. Instead of building custom integrations or doing manual data entry, Claude Desktop can interact with both Slack and HubSpot.
+This shows how MCP makes business tools work together. Instead of building custom integrations or doing manual data entry, Claude can interact with both Slack and HubSpot.
 
 You can make this workflow even better:
 
