--- a/mcp/using-mcp/pandadoc-mcp-guide/index.mdx
+++ b/mcp/using-mcp/pandadoc-mcp-guide/index.mdx
@@ -77,7 +77,7 @@ Please, confirm the Progress Report template exists using the PandaDoc MCP serve
 
 ![Find the template](./assets/find-template.png)
 
-Now ask Claude to generate the report and create the document:
+Now ask Claude to generate a short scrum report, create the document and share it with an email in your organization:
 
 ```txt
 Now, please create a short scrum report regarding tasks advancement. Then create a document in PandaDoc with the Progress Report template and fill it with the scrum report. Then, publish and share the document with an_email_address_com.
