--- a/mcp/using-mcp/pandadoc-mcp-guide/index.mdx
+++ b/mcp/using-mcp/pandadoc-mcp-guide/index.mdx
@@ -5,6 +5,9 @@ description: Connect PandaDoc to Claude Desktop to generate professional documen
 
 PandaDoc is a document automation platform that generates professional documents from templates. Their MCP server lets you create and populate documents directly through Claude Desktop, so you can generate contracts, proposals, and reports by describing what you need in natural language.
 
+![](./assets/final-result.png)
+
+
 In this guide, you'll learn how to connect the PandaDoc MCP server with Claude Desktop.
 
 ## Prerequisites 
@@ -16,7 +19,7 @@ For this guide, you will need:
 
 ## Create a PandaDoc template
 
-You need a template for Claude to work with when generating documents. PandaDoc uses templates as the foundation for all documents, so we'll create a simple one that Claude can populate with your specific content. In your PandaDoc dashboard, go to Templates and click **+ Template**.
+You need a template for Claude to work with when generating documents. PandaDoc uses templates as the foundation for all documents, so we'll create a simple one that Claude can populate with your specific content. In your PandaDoc dashboard, click **Templates** in the sidebar, then click **+ Template** (or **Other Template Type** if you using a new account).
 
 ![Add a new template](./assets/add-template.png)
 
@@ -28,21 +31,25 @@ Name your template "Progress Report Template" by double-clicking the template na
 
 ![Rename the template](./assets/rename-template.png)
 
-Now that you have a template, get your PandaDoc API key.
+Click **Create document** to create the template. Now that you have a template, get your PandaDoc API key.
 
 ### Retrieve the API Key
 
-In the PandaDoc dashboard, navigate to **Settings → API and Integrations**. Scroll down and click "API".
+In the PandaDoc dashboard, navigate to **Settings → API and Integrations**. Scroll down and click **API** in the **API and Webhooks** section.
 
 ![API key](./assets/api-settings.png)
 
-This redirects you to the API configuration page where you can view your sandbox and production keys. Copy the Sandbox API Key and save it. You'll need it for the Claude Desktop configuration.
+This redirects you to the API configuration page where you can view your sandbox and production keys. Click **Generate** to create a sandbox API key, then copy the key and save it. You'll need it for the Claude Desktop configuration.
 
 ![Copy the Sandbox API key](./assets/sandbox-api-key.png)
 
 ### Connect the PandaDoc MCP server
 
-Add the PandaDoc configuration to your `claude_desktop_config.json` file:
+Next, update your Claude Desktop configuration to include the MCP server. To find and edit the `claude_desktop_config.json` file, go to **Settings** in Claude Desktop, then navigate to **Developer** > **Edit Config**.
+
+![Claude Desktop configuration settings](./assets/claude-desktop-config-settings.png)
+
+Add the PandaDoc configuration to the `claude_desktop_config.json` file:
 
 ```json
 {
@@ -72,7 +79,7 @@ Test the integration by asking Claude to create a progress report using your tem
 Ask Claude to find your template:
 
 ```txt
-Please, confirm the Progress Report template exists using the PandaDoc MCP server.
+Confirm the Progress Report template exists using the PandaDoc MCP server.
 ```
 
 ![Find the template](./assets/find-template.png)
@@ -80,7 +87,7 @@ Please, confirm the Progress Report template exists using the PandaDoc MCP serve
 Now ask Claude to generate a short scrum report, create the document and share it with an email in your organization:
 
 ```txt
-Now, please create a short scrum report regarding tasks advancement. Then create a document in PandaDoc with the Progress Report template and fill it with the scrum report. Then, publish and share the document with an_email_address_com.
+Create a short scrum report regarding tasks advancement. Then create a document in PandaDoc with the Progress Report template and fill it with the scrum report. Then, publish and share the document with an_email_address_com.
 ```
 
 ![Generating and publishing the document](./assets/generate-document.png)
@@ -89,4 +96,4 @@ Claude will generate the report content, populate your template, create the docu
 
 ## Conclusion
 
-In this guide, you learned how to connect the PandaDoc MCP server to Claude Desktop for automated document generation. You can build on this by combining it with other MCP servers, like using[ Slack conversations](/mcp/using-mcp/slack-mcp-guide) to automatically generate project reports or client updates through PandaDoc.
+In this guide, you learned how to connect the PandaDoc MCP server to Claude Desktop for automated document generation. You can build on this by combining it with other MCP servers, like using [Slack conversations](/mcp/using-mcp/slack-claude-quickstart) to automatically generate project reports or client updates through PandaDoc.
