--- a/mcp/using-mcp/it-helpdesk-realtime-agent/index.mdx
+++ b/mcp/using-mcp/it-helpdesk-realtime-agent/index.mdx
@@ -30,7 +30,7 @@ We're using MCP to create a toolset that connects an AI voice agent to your exis
 
 We can use Gram to curate the perfect set of MCP tools from HubSpot and Slack APIs, then host them as a single MCP server. The voice agent connects to this server and therefore has real-world capabilities, not just conversational ones.
 
-We'll use OpenAI's [Realtime Agent SDK](https://platform.openai.com/docs/agents/realtime) for the voice agent. You can find the demo app [here](https://github.com/ritza-co/taskmaster-realtime-agent-demo).
+We'll use OpenAI's [Realtime Agent SDK](https://platform.openai.com/docs/guides/voice-agents?voice-agent-architecture=speech-to-speech) for the voice agent. You can find the demo app [here](https://github.com/ritza-co/taskmaster-realtime-agent-demo).
 
 ### What is Gram?
 
@@ -145,7 +145,7 @@ Use **Pass-through authentication** so authentication tokens are passed directly
 
 ## Setting up a Realtime voice agent
 
-This guide uses our [Realtime voice agent demo](https://github.com/ritza-co/taskmaster-realtime-agent-demo) that connects to your Gram-hosted MCP toolset. The demo uses [OpenAI's Realtime Agent SDK](https://platform.openai.com/docs/agents/realtime) to handle both voice interaction and tool calling directly.
+This guide uses our [Realtime voice agent demo](https://github.com/ritza-co/taskmaster-realtime-agent-demo) that connects to your Gram-hosted MCP toolset. The demo uses [OpenAI's Realtime Agent SDK](https://platform.openai.com/docs/guides/voice-agents?voice-agent-architecture=speech-to-speech) to handle both voice interaction and tool calling directly.
 
 When you speak to the agent, it can:
 
@@ -252,6 +252,15 @@ Pretty cool, right? You just built a voice agent that can check HubSpot tickets 
 
 The real power here is in the curation. Instead of dumping every possible API endpoint into your agent, you picked exactly what you needed. That's what makes it actually useful instead of just impressive.
 
-This same approach works for other IT workflows too. Think about adding password resets from your identity provider, or letting people request software licenses through voice. The pattern stays the same: pick the right APIs, curate the tools, connect them through Gram, and let people talk to them naturally.
+This same approach works for other IT workflows too. Think about adding password resets from your identity provider, or letting people request software licenses through voice. 
+
+You can even extend the voice agent concept to handling phone calls and give the agent the ability to "hand off" to a human agent if needed.
 
 Your helpdesk just got a lot more helpful.
+
+## Further reading
+
+- [Gram](https://getgram.ai)
+- [OpenAI Realtime Agent SDK](https://platform.openai.com/docs/guides/voice-agents?voice-agent-architecture=speech-to-speech)
+- [Tool curation](/mcp/building-servers/less-is-more)
+- [Curating Tools with Gram](https://docs.getgram.ai/build-mcp/advanced-tool-curation)
