--- a/mcp/using-mcp/it-helpdesk-realtime-agent/index.mdx
+++ b/mcp/using-mcp/it-helpdesk-realtime-agent/index.mdx
@@ -20,7 +20,7 @@ What if they could just say "Hey, what's the status of my password reset request
   <source src="./assets/realtime-agent-demo.mp4" type="video/mp4" />
 </video>
 
-## What are we building? 
+## What are we building?
 
 AI agents can chat, but how do you give one the ability to actually check HubSpot tickets or post Slack messages? That's exactly what MCP (Model Context Protocol) solves.
 
@@ -77,12 +77,13 @@ You can find our [modified HubSpot OpenAPI spec here](https://github.com/ritza-c
 
 1. First upload the HubSpot Tickets OpenAPI document and name it "HubSpot Tickets".
 
+   **Important**: Name the server exactly "HubSpot Tickets" as this affects the environment variable naming convention. The server name gets converted to `HUBSPOT_TICKETS_BEARER_AUTH` in the environment variables.
+
 ![Upload HubSpot toolset part 1](./assets/upload-hubspot-toolset-1.png)
 
 2. Complete the upload process. Gram converts endpoints to MCP tool definitions.
 
 ![Upload HubSpot toolset](./assets/upload-hubspot-toolset-2.png)
-
 
 At this point, all HubSpot tools are available but not yet enabled for any specific use case.
 
@@ -98,7 +99,7 @@ Navigate to `https://app.getgram.ai/<your-org>/<your-project>/integrations` and 
 
 This gives you access to essential Slack tools like `chat.postMessage` without needing to manage your own OpenAPI specification.
 
-### Create and curate the "IT Helpdesk" toolset
+### Create and curate the "Tech Support" toolset
 
 Next, we'll create a single *combined* and *curated* toolset that includes only the essential HubSpot and Slack tools. This focused approach reduces tool explosion and improves LLM efficiency. You can read more on the benefits of curated toolsets [here](/mcp/building-servers/less-is-more).
 
@@ -106,30 +107,43 @@ Go to *Toolsets* and click on the **+ ADD TOOLSET** button.
 
 ![Curate tech support toolset](./assets/curate-tech-support-toolset.png)
 
-Enter the name of the toolset and click on the **CREATE** button.
+Enter the name of the toolset and click on the **Create** button.
 
-When creating your IT Helpdesk toolset, be selective about which tools to enable:
+When creating your Tech Support toolset, be selective about which tools to enable:
 
 
 **Only enable these specific tools:**
 
 From `HubSpot` we'll enable the tools for:
-- Get ticket by ID
-- Find tickets by contact email  
-- Read status/assignee/summary fields
+- Get ticket by ID (`get_crm_v3_objects_tickets_ticket_idb3ff2d6e`)
+- Find tickets by contact email (`post_crm_v3_objects_tickets_search_do_search`)
+- Read status/assignee/summary fields (`get_crm_v3_objects_tickets_get_page`)
 
 ![Enable HubSpot tools](./assets/hubspot-tools-enable.png)
 
 From `Slack` we'll enable the tools for:
-- Fetching Conversations
-- Fetching Conversations by ID (for getting a full thread)
+- Fetching Conversations (`conversations_list`)
+- Fetching Conversations by ID (for getting a full thread) (`conversations_info`)
 - Post message to channel/DM (`chat.postMessage`)
 
 ![Enable Slack tools](./assets/enable-slack-tools.png)
 
 Leave all other tools disabled to keep your agent focused.
 
-Configure authentication for both HubSpot and Slack under the toolset's **Auth** tab, using environment variables for tokens.
+Configure authentication for both HubSpot and Slack by setting up the environment variables through the UI:
+
+1. Navigate to **Environments** in the sidebar
+2. Enter the **Default** environment
+3. Click the three dots next to the **Add Variable** button in the top right
+4. Click **Fill for toolset**
+5. Select your IT Helpdesk toolset from the dropdown
+6. Click **Fill variables**
+7. Populate the variables with your actual keys:
+   - `HUBSPOT_TICKETS_BEARER_AUTH`: Your HubSpot Private App token
+   - `HUBSPOT_TICKETS_SERVER_URL`: `https://api.hubapi.com`
+   - `SLACK_SERVER_URL`: `https://slack.com/api`
+   - `SLACK_TOKEN`: Your Slack Bot User OAuth Token
+8. Click **Save**
 
 ![Configure toolset variables](./assets/fill-toolset-vars.png)
 
@@ -139,9 +153,13 @@ Navigate to the MCP tab on the IT Helpdesk toolset page. Click on the **ENABLE**
 
 ![Enable tech support toolset](./assets/enable-tech-support-toolset.png)
 
+Make the server public by clicking the **Public** button and toggling server privacy to public.
 
+![Make server public](./assets/make-server-public.png)
 
-Use **Pass-through authentication** so authentication tokens are passed directly from the client. This gives you more control over credential management and allows different clients to use different tokens.
+Save the MCP server endpoint for later by clicking on your MCP server and copying the hosted URL from the MCP details page:
+
+![Copy MCP server URL](./assets/copy-mcp-server-url.png)
 
 ## Setting up a Realtime voice agent
 
@@ -189,7 +207,7 @@ Start the app:
 npm run dev
 ```
 
-The app will be available at http://localhost:3000. 
+The app will be available at http://localhost:3000.
 
 
 ### Connecting the toolset to the Realtime voice agent
@@ -211,7 +229,7 @@ Fill in the placeholders with your actual tokens and endpoint.
         "--header",
         "MCP-SLACK-TOKEN:<your-slack-bot-token>",
         "--header",
-        "MCP-HUBSPOT-OPENAPI-BEARER-AUTH:<your-hubspot-private-app-token>"
+        "MCP-HUBSPOT-TICKETS-BEARER-AUTH:<your-hubspot-private-app-token>"
       ]
     }
   }
@@ -222,7 +240,7 @@ Save. Optionally enable Logs and pick a codec (Opus default; PCMU/PCMA simulates
 
 ### Try it with voice
 
-Let's try it out with voice. We've set up a sample ticket in HubSpot with a password reset request. 
+Let's try it out with voice. We've set up a sample ticket in HubSpot with a password reset request.
 
 ![HubSpot support ticket](./assets/hubspot-support-ticket.png)
 
@@ -252,7 +270,7 @@ Pretty cool, right? You just built a voice agent that can check HubSpot tickets 
 
 The real power here is in the curation. Instead of dumping every possible API endpoint into your agent, you picked exactly what you needed. That's what makes it actually useful instead of just impressive.
 
-This same approach works for other IT workflows too. Think about adding password resets from your identity provider, or letting people request software licenses through voice. 
+This same approach works for other IT workflows too. Think about adding password resets from your identity provider, or letting people request software licenses through voice.
 
 You can even extend the voice agent concept to handling phone calls and give the agent the ability to "hand off" to a human agent if needed.
 
